change the categories selection to unified file

--- a/personal.html
+++ b/personal.html
@@ -1,16 +1,9 @@
 ---
-layout: page
+layout: categories
 permalink: /categories/personal
 title: personal posts
 ---
 
-<div id="wrap">
-	<div id="header">
-		<div class="slogan">
-				<a href="/categories/tech.html">tech</a> /
-				<a href="/categories/personal.html">personal</a> 
-				<!-- <a href="/life.html" class="orange">life{me}</a> -->
-		</div>
 
 <div id="home">
   <br>
