--- a/game.html
+++ b/game.html
@@ -1,13 +1,13 @@
 ---
 layout: categories
-permalink: /categories/tech
-title: tech posts
+permalink: /categories/game
+title: game posts
 ---
 
 <div id="home">
 <br>
   <ul class="posts">
-    {% for post in site.categories.tech %}
+    {% for post in site.categories.game %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
